# holospaces

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  index.html
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  post-create.sh
.devcontainer/shell/: aliases.zsh  gitconfig  gitconfig-home  zshrc
.github/workflows/: ci.yml  docs.yml  pages-preview.yml  pages-seed.yml  pages.yml  vv.yml
crates/holospaces/: Cargo.toml
crates/holospaces-emulator/: Cargo.toml
crates/holospaces-emulator/src/: lib.rs
crates/holospaces-node/: Cargo.toml
crates/holospaces-node/src/: egress.rs  lib.rs  main.rs  ota.rs  storage.rs
crates/holospaces-node/tests/: ws_egress.rs
crates/holospaces-web/: Cargo.toml
crates/holospaces-web/extension/: README.md  background.js  connector.js  egress-test.mjs  manifest.json
crates/holospaces-web/src/: jit_web.rs  lib.rs  opfs_store.rs  webrtc.rs  wsnet.rs
crates/holospaces-web/web/: .gitignore  _battle.mjs  _diag.mjs  alpine-aarch64-boot-test.mjs  alpine-aarch64-boot-worker.mjs  boot-sm.html  boot.html  build-workbench.mjs  cc45-x64-boot-test.mjs  cc50-streaming-boot-test.mjs  devcontainer-net-test.mjs  devcontainer-test.mjs  ext-host-test.mjs  extensions-test.mjs  fb-resume-x64-boot-worker.mjs  fb-resume-x64-boot.html  fb-rung2-boot-test.mjs  fb-rung2-boot-worker.mjs  fb-rung2-boot.html  fb-rung2-x64-boot-worker.mjs  fb-rung2-x64-boot.html  fb-rung3-boot-test.mjs  fb-rung3-boot-worker.mjs  fb-rung3-boot.html  fb-xfce-x64-boot-worker.mjs  fb-xfce-x64-boot.html  galtest.mjs  headless-x64-boot.mjs  image-stream-worker.mjs  image-stream.html  index.html  link-preview-server.mjs  lsp-test.mjs  make-link-bundle.mjs  make-x64-console-fixture.mjs  make-x64-kblob-fixture.mjs  make-x64-stream-fixture.mjs  manager-test.mjs  marketplace-test.mjs  open-kappa-browser-test.mjs  (+49 more)
crates/holospaces-web/web/builtin-extensions/holospace-fs/: extension.js  node-exthost.js  node-exthost.test.cjs
crates/holospaces-web/web/builtin-extensions/holospace-scm/: extension.js
crates/holospaces-web/web/builtin-extensions/holospace-search/: extension.js  package.json  search-core.cjs  search-core.test.cjs
crates/holospaces-web/web/builtin-extensions/holospace-tasks/: package.json  tasks-core.cjs  tasks-core.test.cjs
crates/holospaces-web/web/extensions/holospace-demo/: extension.js  package.json
crates/holospaces/examples/: asm_fsck.rs  boot_linux.rs  cc37_mkrootfs.rs  cc45_boot_diag.rs  cc45_mkrootfs.rs  dogfood_probe.rs  holo_fixture.rs  kappa_of.rs  occ_diag.rs  rvrun.rs  virtio_boot.rs
crates/holospaces/src/: assembly.rs  boot.rs  compose.rs  config.rs  content_net.rs  disk.rs  dockerfile.rs  emulator.rs  engine.rs  identity.rs  image_init.rs  import.rs  lib.rs  machine.rs  manager.rs  oci.rs  peer.rs  personalization.rs  projection.rs  realizations.rs  surface.rs  wasm.rs
crates/holospaces/src/assembly/: ext4.rs
crates/holospaces/src/emulator/: aarch64.rs  devbus.rs  jit.rs  jit_exec.rs  net.rs  x64.rs  x64_jit.rs  x64_jit_exec.rs
crates/holospaces/tests/: cc10_ingestion.rs  cc11_raw_terminal.rs  cc11_workspace.rs  cc12_manager_console.rs  cc13_vscode_workspace.rs  cc14_assembly.rs  cc14_virtio_block.rs  cc15_workspace.rs  cc16_network.rs  cc17_workspace_fs.rs  cc18_lsp.rs  cc18_lsp_bridge.rs  cc1_kappa_kat.rs  cc20_import.rs  cc21_port_forward.rs  cc22_lifecycle.rs  cc23_personalization.rs  cc24_auth.rs  cc25_features.rs  cc26_build.rs  cc27_compose.rs  cc28_reconfigure.rs  cc29_read_verify_boundary.rs  cc2_holo_engine.rs  cc30_resume.rs  cc31_resume_terminal.rs  cc33_guest_bridge.rs  cc35_aarch64.rs  cc36_aarch64.rs  cc37_aarch64.rs  cc38_content_net.rs  cc3_substrate_tck.rs  cc40_product_security.rs  cc44_x64_boot.rs  cc45_dogfood.rs  cc45_x64_alpine.rs  cc46_devbus_parity.rs  cc46_realboot.rs  cc48_jit.rs  cc48_jit_boot.rs  (+35 more)
docs/: .gitignore  01-Introduction-and-Goals.md  02-Architecture-Constraints.md  03-Context-and-Scope.md  04-Solution-Strategy.md  05-Building-Block-View.md  06-Runtime-View.md  07-Deployment-View.md  08-Concepts.md  09-Architecture-Decisions.md  10-Quality-Requirements.md  11-Technical-Risks.md  12-Glossary.md  13-Product-Security.md  Conceptual-Model.md  Gemfile  Home.md  Lifecycle-Agreement-Processes.md  Lifecycle-Organizational-Project-Enabling-Processes.md  Lifecycle-Technical-Management-Processes.md  Lifecycle-Technical-Processes.md  README.md  _Footer.md  _Sidebar.md  docs-definition.md
docs/scripts/: build.sh  check-wiki-state.sh  install-tools.sh  render-15288.sh  render-opm-index.sh  render-scientific.sh  render-wiki-frame.sh  stage-to-wiki-root.sh  v1-structural-alignment.rb  v2-arc42-build.sh  v3-structurizr.sh  v4-cmark-gfm.sh  v5-github-markup.rb  v5-github-markup.sh  v6-opl-syntax.rb  v6-opl-syntax.sh  v7-opd-opl-coherence.rb  v7-opd-opl-coherence.sh  v8-iso-15288-superset.rb  v8-iso-15288-superset.sh  validate.sh
docs/tests/: run-all.sh  test-v6-translator.rb  test-v7-extractor.rb
docs/tools/: arc42-template-pin.txt  checksums.txt  iso-15288-processes.txt  iso-19450-opd-coherence.txt  iso-19450-opl.ebnf  opl-to-svg.rb  versions.txt
ext/holospace-fs/: extension.js
ext/holospace-search/: search-core.cjs
pkg/: holospaces_web.js  holospaces_web_bg.wasm
pr-preview/pr-10/: workbench.html
pr-preview/pr-11/: index.html  workbench.html
pr-preview/pr-28/: index.html
pr-preview/pr-29/: workbench.html
pr-preview/pr-31/: workspace.dtb
pr-preview/pr-33/: fixture.holo
pr-preview/pr-34/: provision-worker.mjs
pr-preview/pr-35/: provision-worker.mjs
pr-preview/pr-36/: fixture-userland.wasm  workbench.html
pr-preview/pr-37/: index.html  workbench.html
scripts/: browser-manager-test.sh  build-emulator.sh  build-extension.sh  build-site.sh  dev-boot.sh  dev-rebuild-run.sh  dev-site.py
vv/: PROVENANCE.md  README.md  run.sh
vv/artifacts/cc18/lsp-demo/: Cargo.toml
vv/artifacts/cc18/lsp-demo/src/: main.rs
vv/heavy/: cc45-dogfood-devcontainer.sh
vv/lib/: build-wasm-peer.sh
vv/suites/: cc1-kappa-addressing.sh  (+77 more)
(+209 files in other folders)
