[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Hologram-Technologies/holospaces"

# Quality commitments enforced from the beginning (arc42 ch.10). CI runs clippy
# with `-D warnings`, so every workspace member upholds these.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
