[workspace]
resolver = "2"
members = ["crates/*"]
# The browser peer is wasm32-only (web-sys / wasm-bindgen); built explicitly via
# scripts/browser-manager-test.sh and the Pages deploy, not in the host build.
exclude = ["crates/holospaces-web"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Hologram-Technologies/holospaces"

# The hologram substrate is consumed by reference (ADR-006): git dependencies on
# the private hologram repo, pinned to one rev so every member resolves the same
# substrate. uor-addr / uor-foundation come transitively from crates.io. Auth:
# `git-fetch-with-cli` (.cargo/config.toml) uses the environment's GitHub
# credentials; in CI a token with read access to Hologram-Technologies/hologram
# is configured before the build (see .github/workflows/ci.yml).
[workspace.dependencies]
# The lib-core hologram crates are no_std-capable (hologram's own `just embedded`
# builds them for thumbv7em). holospaces takes them with default features off so
# its core compiles for bare-metal / browser peers; the `std` feature re-enables.
hologram-substrate-core = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-substrate-core", default-features = false }
hologram-realizations   = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-realizations", default-features = false }
hologram-substrate-tck  = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-substrate-tck" }
hologram-store-mem      = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-store-mem" }
hologram-store-native   = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-store-native" }
hologram-net-http       = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-net-http" }
hologram-exec           = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-exec", default-features = false }
hologram-compiler       = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-compiler" }
hologram-backend        = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-backend", default-features = false }
hologram-graph          = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-graph" }
hologram-archive        = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-archive" }
hologram-runtime        = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-runtime" }
hologram-runtime-wasmtime = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-runtime-wasmtime" }
hologram-runtime-bare   = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-runtime-bare", default-features = false }
# The bare-metal HAL seam (BlockDevice / NetworkInterface) the κ-disk implements —
# no_std + alloc, so the κ-disk is part of the portable peer core. Consumed by
# reference (ADR-006).
hologram-bare-hal       = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-bare-hal", default-features = false }
prism                   = { version = "0.4", package = "uor-prism" }
# The async trait emitter the HAL traits use, and a no_std spin lock for the
# κ-disk's in-memory sector index — versions matched to hologram's own.
async-trait             = "0.1"
spin                    = { version = "0.9", default-features = false, features = ["spin_mutex"] }

# Quality commitments enforced from the beginning (arc42 ch.10). CI runs clippy
# with `-D warnings`, so every workspace member upholds these.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
