[package]
name = "holospaces-web"
description = "The Hologram Platform Manager — holospaces' browser peer (wasm32), served from GitHub Pages"
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Hologram-Technologies/holospaces"

# wasm32-only (web-sys / wasm-bindgen). Excluded from the host workspace; built
# explicitly via `scripts/browser-manager-test.sh` and the Pages deploy.
[lib]
crate-type = ["cdylib"]

[dependencies]
holospaces = { path = "../holospaces" }
hologram-store-mem = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-store-mem" }
hologram-substrate-core = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-substrate-core" }
# The substrate runtime + the interpreter ContainerEngine (wasmi, no_std) — so
# the browser peer actually boots userland containers (ADR-008; arc42 ch.7). The
# wasmi interpreter runs in wasm32 where a JIT cannot.
hologram-runtime = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-runtime" }
hologram-runtime-bare = { git = "https://github.com/Hologram-Technologies/hologram", rev = "18f553d8578997ce32e7b653786a0bcf9b09a2c0", package = "hologram-runtime-bare", features = ["std"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"

# The browser egress transport (CC-16, ADR-014): the userspace TCP/IP NAT runs in
# wasm with the peer core, and its TCP streams are tunnelled out over a WebSocket
# to a relay (there is no raw NIC behind a tab). Only the WebSocket surface is
# needed.
[dependencies.web-sys]
version = "0.3"
features = ["WebSocket", "MessageEvent", "BinaryType", "Event", "CloseEvent"]

[profile.release]
# Optimize for speed, not size: the browser peer boots a real OS on the system
# emulator (a hot interpreter loop), so throughput matters more than a smaller
# bundle.
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
# Skip `wasm-opt`: wasm-bindgen now emits a module with more than one table
# (reference types), which the `wasm-opt` bundled with `wasm-pack` rejects
# ("Only 1 table definition allowed in MVP"). The module is already optimized by
# the Rust release profile (opt-level=3 + LTO) and is valid wasm the browser runs
# directly — `wasm-opt` is only a post-pass size optimizer, so skipping it keeps
# the build reproducible across environments (it was failing only where the
# bundled `wasm-opt` was an older, MVP-only build).
wasm-opt = false
