[package]
name = "holospaces"
description = "UOR-native boot layer over the hologram substrate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# The hologram substrate, consumed by reference (ADR-003, ADR-006). holospaces
# composes these contracts; it never re-implements them. Pinned by rev.
hologram-substrate-core = { workspace = true }
hologram-realizations = { workspace = true }
# The .holo Engine building block: holospaces supplies the .holo execution
# backend (arc42 ch.5 / ch.7), bound to hologram's executor.
hologram-exec = { workspace = true }
hologram-backend = { workspace = true }
# The Ingestor parses devcontainer.json (the Dev Container spec) at the
# provisioning boundary (Law L2). Conformance: CC-4.
serde_json = "1"
# Validate Wasm code modules against the WebAssembly specification before they
# run on the substrate's execution surface. Conformance: CC-5.
wasmparser = "0.221"

[dev-dependencies]
# CC-3 — the substrate conformance battery + the stores holospaces resolves through.
hologram-substrate-tck = { workspace = true }
hologram-store-mem = { workspace = true }
hologram-store-native = { workspace = true }
# Real container runtime — the e2e tier boots a real hologram.* Wasm container
# through hologram's runtime (no mocks).
hologram-runtime = { workspace = true }
hologram-runtime-wasmtime = { workspace = true }
# CC-2 — the compiler to build a .holo for the differential oracle.
hologram-compiler = { workspace = true }
hologram-graph = { workspace = true }
# Real multi-peer sync over a loopback HTTP-CAS gateway (Identity sync, R5/QS5).
hologram-net-http = { workspace = true, features = ["live"] }
hologram-archive = { workspace = true }
prism = { workspace = true }
smallvec = "1"
# CC-1 cross-check oracles (published KATs are the authority; these reproduce them).
blake3 = "1"
sha2 = "0.10"
sha3 = "0.10"
# Parse the imported KAT / Dev Container artifacts in the CC-1 / CC-4 witnesses.
serde_json = "1"
# CC-5 — drive the WebAssembly spec test/core .wast suite (directives + encode).
wat = "1"
wast = "251"
# Drive the async ContainerRuntime trait in tests without a full async runtime.
pollster = "0.4"
async-trait = "0.1"
jsonschema = "0.46.5"
