[package]
name = "holospaces"
description = "UOR-native boot layer over the hologram substrate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# `std` (default) enables the host-side provisioning surfaces — the Dev Container
# ingestor (CC-4) and the Wasm validator (CC-5). With `--no-default-features`
# the crate is `no_std` + `alloc`: the environment-agnostic boot core
# (realizations, boot, identity, peer, manager, .holo engine) that the browser
# and bare-metal peers compile (arc42 ch.7; portability Q6). Mirrors hologram's
# own tri-target discipline (`just wasm` / `just embedded`).
default = ["std"]
std = [
    "dep:serde_json",
    "dep:wasmparser",
    "dep:hologram-exec",
    "dep:hologram-backend",
    "hologram-substrate-core/std",
    "hologram-realizations/std",
    "hologram-exec/std",
    "hologram-backend/std",
]

[dependencies]
# The hologram substrate, consumed by reference (ADR-003, ADR-006). holospaces
# composes these contracts; it never re-implements them. Pinned by rev,
# no_std-capable (default features off; the `std` feature re-enables).
hologram-substrate-core = { workspace = true }
hologram-realizations = { workspace = true }
# The κ-disk (CC-7) implements hologram's BlockDevice HAL trait, backed by a
# KappaStore — a real filesystem image as κ-addressed content. no_std + alloc,
# so it is part of the portable peer core (the execution surface on every peer).
hologram-bare-hal = { workspace = true }
async-trait = { workspace = true }
spin = { workspace = true }
# The emulator's F/D floating-point extension (CC-9) on hologram's no_std float
# foundation (libm) — deterministic, reproducible across peers.
libm = { workspace = true }
# The Layer Assembler's gzip (DEFLATE) decoder for OCI `tar+gzip` layers
# (no_std + alloc — part of the portable core, like the κ-disk it feeds).
miniz_oxide = { workspace = true }
# The .holo Engine building block: holospaces supplies the .holo execution
# backend (arc42 ch.5 / ch.7), bound to hologram's executor. The CPU kernels'
# float math needs std today, so the engine is a `std` surface (the bare-metal
# core still drives the Wasm-container lifecycle).
hologram-exec = { workspace = true, optional = true }
hologram-backend = { workspace = true, features = ["cpu"], optional = true }
# Host-side provisioning surfaces, gated by `std`: the Dev Container ingestor
# (CC-4) parses devcontainer.json; the Wasm validator (CC-5) checks modules.
serde_json = { version = "1", optional = true }
wasmparser = { version = "0.221", optional = true }

[dev-dependencies]
# Named directly in the CC-8 witness (a source-peer KappaSync, SyncError, Bytes,
# address oracle) — the same substrate-core contracts the lib composes, with std.
hologram-substrate-core = { workspace = true, features = ["std"] }
# CC-9 — build a ContainerManifest with the guest image as initial state, to run
# the emulator codemodule on the real runtime.
hologram-realizations = { workspace = true, features = ["std"] }
# CC-3 — the substrate conformance battery + the stores holospaces resolves through.
hologram-substrate-tck = { workspace = true }
hologram-store-mem = { workspace = true }
hologram-store-native = { workspace = true }
# Real container runtime — the e2e tier boots a real hologram.* Wasm container
# through hologram's runtime (no mocks).
hologram-runtime = { workspace = true }
hologram-runtime-wasmtime = { workspace = true }
# The interpreter ContainerEngine (wasmi, no_std) — the browser + bare-metal
# peers' engine. Witnessed natively (CC-6) so the same engine that boots a
# userland in Chromium and on bare-metal is validated against the real runtime.
hologram-runtime-bare = { workspace = true, features = ["std"] }
# CC-2 — the compiler to build a .holo for the differential oracle.
hologram-compiler = { workspace = true }
hologram-graph = { workspace = true }
# Real multi-peer sync over a loopback HTTP-CAS gateway (Identity sync, R5/QS5).
hologram-net-http = { workspace = true, features = ["live"] }
hologram-archive = { workspace = true }
prism = { workspace = true }
smallvec = "1"
# CC-1 cross-check oracles (published KATs are the authority; these reproduce them).
blake3 = "1"
sha2 = "0.10"
sha3 = "0.10"
# Parse the imported KAT / Dev Container artifacts in the CC-1 / CC-4 witnesses.
serde_json = "1"
# CC-5 — drive the WebAssembly spec test/core .wast suite (directives + encode).
wat = "1"
wast = "251"
# Drive the async ContainerRuntime trait in tests without a full async runtime.
pollster = "0.4"
async-trait = "0.1"
jsonschema = "0.46.5"
# CC-9 OS-boot witness — decompress the pinned gzipped Linux kernel Image
# (pure-Rust miniz_oxide backend; dev-only).
flate2 = "1"
